--- a/Feedbacksystem/templates/pages/addsubject.html
+++ b/Feedbacksystem/templates/pages/addsubject.html
@@ -13,8 +13,6 @@
 <form method="POST" action="">
     {% csrf_token %}
     {{ form.as_p }}
-
-
-<input type = "submit" value="Add">
+<input class="btn custom-btn" type ="submit" value="Add">
 </form>
 {% endblock feature %}
