--- a/Feedbacksystem/templates/pages/edit_form.html
+++ b/Feedbacksystem/templates/pages/edit_form.html
@@ -18,7 +18,7 @@
  {% for i in questions %}
     <tr>
     <td>{{i.text}}</td>
-    <td><a class="btn btn-warning" href="{% url 'edit_question'  i.pk  %}"><i class="bi bi-pencil-square"></i> <b>Edit</b></a></td>
+    <td><a class="btn btn-warning custom-btn" href="{% url 'edit_question'  i.pk  %}"><i class="bi bi-pencil-square"></i> <b>Edit</b></a></td>
 </tr>
 {% endfor %}
     </table>
