--- a/Feedbacksystem/templates/pages/edit_user_group.html
+++ b/Feedbacksystem/templates/pages/edit_user_group.html
@@ -19,6 +19,6 @@
         <option value="{{ group.name }}" {% if group in user_groups %} selected {% endif %}>{{ group.name }}</option>
         {% endfor %}
     </select>
-    <button type="submit" class="btn btn-primary">Update</button>
+    <button type="submit" class="btn custom-btn">Update</button>
 </form>
 {% endblock feature %}
