--- a/Feedbacksystem/templates/pages/event_creation_form.html
+++ b/Feedbacksystem/templates/pages/event_creation_form.html
@@ -63,7 +63,7 @@
                 {% endfor %}
             </div>
         </div>
-        <button type="submit" class="btn btn-warning">Create Event</button>
+        <button type="submit" class="btn custom-btn" style="margin-top: 1em;">Create Event</button>
     </form>
      
 </div>
