--- a/Feedbacksystem/templates/pages/admin_event_evaluations.html
+++ b/Feedbacksystem/templates/pages/admin_event_evaluations.html
@@ -3,40 +3,37 @@
 {% block title %}Event Feedback and Evaluations{% endblock %}
 
 {% block header %}
-
-    <h2> Event Feedback and Evaluations </h2>
+        <h2> Event Feedback and Evaluations </h2>
+        <hr>    
+    {% endblock header %}
     <hr>
-   
-{% endblock header %}
-<hr>
-{% block feature %}
-
-</form>
-
-
-<table class="table table-striped table-bordered table-responsive  " style="margin-top: 1em;">
-    <tr>
-        <th  scope="col" style="color:#fafafa;  background: #2a9134">EVENT</th>
-        <th  scope="col" style="color:#fafafa;  background: #2a9134">AVERAGE RATING </th>
-        <th  scope="col" style="color:#fafafa;  background: #2a9134">COMMENTS </th>
-        <th  scope="col" style="color:#fafafa;  background: #2a9134">POLARITY </th>
-        <th  scope="col" style="color:#fafafa;  background: #2a9134">ACADEMIC YEAR </th>
-        <th  scope="col" style="color:#fafafa;  background: #2a9134">SEMESTER </th>
-        <th  scope="col" style="color:#fafafa;  background: #2a9134">OPTIONS </th>
-    </tr>
-    {% for i in events %}
-    <tr>
-        <td>{{ i.event.title }} </td>
-        <td>{{ i.average_rating }}</td>
-        <td>{{ i.suggestions_and_comments }}</td>
-        <td></td>
-        <td>{{ i.academic_year }}</td>
-        <td>{{ i.semester }}</td>
-        <td><a class="nav-link" href="{% url 'view_admin_schoolevent_evaluations' i.pk %}"><button class="btn btn-primary" style=" padding:3px 5px 3px 5px"><i class="bi bi-eye-fill" style="font-size:20px"></i></button></td>
-
-    </tr>
-
-    {% endfor %}
-
-</table>
+    {% block feature %}
+    
+    <div class="table-responsive">
+        <table class="table table-bordered">
+            <tr>
+                <th  scope="col">EVENT</th>
+                <th  scope="col">AVERAGE RATING </th>
+                <th  scope="col">COMMENTS </th>
+                <th  scope="col">POLARITY </th>
+                <th  scope="col">ACADEMIC YEAR </th>
+                <th  scope="col">SEMESTER </th>
+                <th  scope="col">OPTIONS </th>
+            </tr>
+            {% for i in events %}
+            <tr>
+                <td>{{ i.event.title }} </td>
+                <td>{{ i.average_rating }}</td>
+                <td>{{ i.suggestions_and_comments }}</td>
+                <td></td>
+                <td>{{ i.academic_year }}</td>
+                <td>{{ i.semester }}</td>
+                <td><a href="{% url 'view_admin_schoolevent_evaluations' i.pk %}"><button class="btn btn-primary" style=" padding:3px 5px 3px 5px"><i class="bi bi-eye-fill" style="font-size:20px"></i></button></td>
+    
+            </tr>
+    
+            {% endfor %}
+    
+        </table>
+    </div>
 {% endblock feature %}
