--- a/Feedbacksystem/templates/pages/delete.html
+++ b/Feedbacksystem/templates/pages/delete.html
@@ -4,7 +4,7 @@
 
 {% block header %}
 
-    <h2> Confirmation</h2>
+    <h2>Confirmation</h2>
     <hr>
    
 {% endblock header %}
@@ -13,9 +13,9 @@
 <form method="POST" action="">
     {% csrf_token %}
     <p> Are you sure you want to delete {{obj}} ?</p>
-    <a href="{{request.META.HTTP_REFERER}}"> Go back </a>
+    <a href="{{request.META.HTTP_REFERER}}" style="text-decoration: none; " class="btn btn-primary">Cancel</a>
 
 
-<input type = "submit" value="Confirm">
+<input type = "submit" value="Confirm" class="btn btn-success">
 </form>
 {% endblock feature %}
