--- a/Feedbacksystem/templates/pages/evaluations.html
+++ b/Feedbacksystem/templates/pages/evaluations.html
@@ -3,11 +3,16 @@
 {% block title %}Evaluations{% endblock %}
 
 {% block header %}
-  <div class="d-flex">
-    <h2> Faculty Evaluations </h2>
-    <h2 style="margin-left: 10rem;"> Total Responses: {{ total_evaluations }}</h2> 
-
-</div>
+<div class="container">
+    <div class="row">
+      <div class="col-md-6">
+        <h2> Faculty Evaluations </h2>
+      </div>
+      <div class="col-md-6">
+        <h2> Total Responses: {{ total_evaluations }}</h2>
+      </div>
+    </div>
+  </div>
 <br>
 {% endblock header %}
 
@@ -17,12 +22,13 @@
   <div class="modal-dialog">
   <div class="modal-content">
   <div class="modal-header">
-    <h1 class="modal-title fs-5" id="exampleModalLabel">Edit Evaluation Status</h1>
+    <h1 class="modal-title fs-5" id="exampleModalLabel">Filter Options</h1>
     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
   </div>
   <div class="modal-body">
     <form method="get" action="">
-      
+      {{faculty_evaluation_filter.form.subject.label_tag}}
+      {{faculty_evaluation_filter.form.subject}}
       {{faculty_evaluation_filter.form.section_subject_faculty.label_tag}}
       {{faculty_evaluation_filter.form.section_subject_faculty}}
       {{faculty_evaluation_filter.form.predicted_sentiment.label_tag}}
@@ -42,28 +48,36 @@
 </div>
 </div>
 <!-- For making sorting functionality -->
-<div class=" d-flex" style="gap: 1em;">
-<button type="button" class="btn btn-warning"  style = "color: black; text-decoration: none; margin-left: 0.5em;"data-bs-toggle="modal" data-bs-target="#exampleModal"><i class="bi bi-pencil-square"></i>
-  <b>Filter Options</b>
-</button>
-<select class="form-select" name="sort" id="sort-list" onchange="location = finalurl();" style="width: auto;">
-  <option value="" id="placeholder" disabled selected hidden>Sort</option>
-  <option id="average_rating" value="average_rating">Average Rating: Ascending</option>
-  <option id="-average_rating" value="-average_rating">Average Rating: Descending</option>
-  <option id="created" value="created">Date Submitted: Ascending</option>
-  <option id="-created" value="-created">Date Submitted: Descending</option>
-
-</select>
-
-<form method="get" action="">
-<div class="d-flex" style="gap: 1em;">
-{{faculty_evaluation_filter.form.comments.label_tag}}
-{{faculty_evaluation_filter.form.comments}}
-<input type = "submit" value="Search" class="btn btn-warning"> 
-
-</form>
-<a href="{% url 'evaluations_csv' %}" class="btn btn-secondary" > Export </a>
-</div>
+<div class="row g-0 align-items-center evaluations_filter">
+  <!-- Filter Options Button -->
+  <div class="col-lg-2 col-sm-4 col-12">
+    <button type="button" class="btn btn-warning custom-btn" style="color: black; text-decoration: none; margin-left: 0.5em;" data-bs-toggle="modal" data-bs-target="#exampleModal">
+      <i class="bi bi-pencil-square"></i> <b>Filter Options</b>
+    </button>
+  </div>
+  
+  <!-- Sort Dropdown -->
+  <div class="col-lg-3 col-md-6 col-sm-8 col-12 evaluations_sort">
+    <select class="form-select" name="sort" id="sort-list" onchange="location = finalurl();">
+      <option value="" id="placeholder" disabled selected hidden>Sort</option>
+      <option id="average_rating" value="average_rating">Average Rating: Ascending</option>
+      <option id="-average_rating" value="-average_rating">Average Rating: Descending</option>
+      <option id="created" value="created">Date Submitted: Ascending</option>
+      <option id="-created" value="-created">Date Submitted: Descending</option>
+    </select>
+  </div>
+  
+  <!-- Search Form and Export Button -->
+  <div class="col-lg-6 evaluations_search" style="margin-left: auto;">
+    <div class="d-flex justify-content-between align-items-center">
+      <form method="get" action="" class="d-flex" style="gap: 1em;">
+        {{faculty_evaluation_filter.form.search.label_tag}}
+        {{faculty_evaluation_filter.form.search}}
+        <input type="submit" value="Search" class="btn btn-warning custom-btn">
+      </form>
+      <a href="{% url 'evaluations_csv' %}" class="btn btn-secondary ms-2" style="margin-right: auto;">Export</a>
+    </div>
+  </div>
 </div>
 <script>
   // for getting the sorting status to be displayed in sorting dropdown placeholder
@@ -100,59 +114,69 @@
   }
 
 </script>
-<table class="table table-striped table-bordered table-responsive  " style="margin-top: 1em;">
-    <tr>
-        <th  scope="col" style="color:#fafafa;  background: #2a9134">SUBJECT</th>
-        <th  scope="col" style="color:#fafafa; background: #2a9134">FACULTY</th>
-        <th  scope="col" style="color:#fafafa; background: #2a9134">AVERAGE RATING </th>
-        <th  scope="col" style="color:#fafafa; background: #2a9134">OVERALL IMPRESSION </th>
-        <th  scope="col" style="color:#fafafa; background: #2a9134">POLARITY </th>
-        <th  scope="col" style="color:#fafafa; background: #2a9134">ACADEMIC YEAR </th>
-        <th  scope="col" style="color:#fafafa; background: #2a9134">SEMESTER </th>
-        <th  scope="col" style="color:#fafafa; background: #2a9134">OPTIONS </th>
-    </tr>
-    {% for i in evaluation %}
-    <tr>
-        <td>{{ i.section_subject_faculty.subjects }} </td>
-        <td>{{ i.section_subject_faculty.faculty }}</td>
-        <td>{{ i.average_rating }}</td>
-        <td>{{ i.comments }}</td>
-        <td>{{ i.predicted_sentiment }}</td>
-        <td>{{ i.academic_year }}</td>
-        <td>{{ i.semester }}</td>
-        <td>
-            
-            <a class="nav-link" href="{% url 'view_evaluation_form' i.pk %}"><button class="btn btn-primary" style=" padding:3px 5px 3px 5px"><i class="bi bi-eye-fill" style="font-size:20px"></i></button></a>
-            <a class="nav-link" href="{% url 'deleteEvaluation'  i.pk  %}"><button class="btn btn-danger" style=" padding:3px 5px 3px 5px; margin-top: 1em;" ><i style="font-size:20px" class='bx bxs-trash' ></i></button></a></td>
-
-    </tr>
-    {% endfor %}
-</table>
-    {% if is_paginated %}
-    <nav class = "pagination" aria-label="...">
-        <ul class="pagination">
-            {% if page_obj.has_previous %}
-          <li class="page-item ">
-            <a class="page-link" tabindex= "-1" aria-disabled = "true" href ="?page={{ page_obj.previous_page_number }}{% if ordering %}&ordering={{ ordering }}{% endif %}">Previous</a>
-          </li>
+<div class="container">
+  <div class="table-responsive evaluations_table">
+    <table class="table table-bordered" style="margin-top: 1em;">
+        <tr>
+            <th  scope="col">SUBJECT</th>
+            <th  scope="col">FACULTY</th>
+            <th  scope="col">AVERAGE RATING </th>
+            <th  scope="col">OVERALL IMPRESSION </th>
+            <th  scope="col">POLARITY </th>
+            <th  scope="col">ACADEMIC YEAR </th>
+            <th  scope="col">SEMESTER </th>
+            <th  scope="col">OPTIONS </th>
+        </tr>
+        {% for i in evaluation %}
+        <tr>
+            <td>{{ i.section_subject_faculty.subjects }} </td>
+            <td>{{ i.section_subject_faculty.faculty }}</td>
+            <td>{{ i.average_rating }}</td>
+            <td>{{ i.comments }}</td>
+            <td>{{ i.predicted_sentiment }}</td>
+            <td>{{ i.academic_year }}</td>
+            <td>{{ i.semester }}</td>
+            <td>
+    
+            <div class="row" style="align-items: center; justify-content: center;">
+              <div class="col-5"><a href="{% url 'admin_view_evaluation_form' i.pk %}">
+                <button class="btn btn-primary" style=" padding:3px 5px 3px 5px">
+                  <i class="bi bi-eye-fill" style="font-size:20px"></i></button></a></div>
+              <div class="col-7">
+                <a href="{% url 'deleteEvaluation'  i.pk  %}"><button class="btn btn-danger" style=" padding:3px 5px 3px 5px; ;" ><i style="font-size:24px" class='bx bxs-trash' ></i></button></a></td>
+                            </div>
+              </div>
+    
+        </tr>
+        {% endfor %}
+    </table>
+  </div>
+      {% if is_paginated %}
+      <nav class = "pagination" aria-label="...">
+          <ul class="pagination">
+              {% if page_obj.has_previous %}
+            <li class="page-item ">
+              <a class="page-link" tabindex= "-1" aria-disabled = "true" href ="?page={{ page_obj.previous_page_number }}{% if ordering %}&ordering={{ ordering }}{% endif %}">Previous</a>
+            </li>
+              {% endif %}
+              {% for i in paginator.page_range%}
+              {% if i == page_obj.number%}
+  
+            <li class="page-item active" aria-current="page">
+              <a class="page-link" href="?page={{i}}{% if ordering %}&ordering={{ ordering }}{% endif %}">{{i}}</a>
+            </li>
+            {% else %}
+            <li class="page-item"><a class="page-link"  href="?page={{i}}{% if ordering %}&ordering={{ ordering }}{% endif %}">{{i}}</a></li>
             {% endif %}
-            {% for i in paginator.page_range%}
-            {% if i == page_obj.number%}
-         
-          <li class="page-item active" aria-current="page">
-            <a class="page-link" href="?page={{i}}{% if ordering %}&ordering={{ ordering }}{% endif %}">{{i}}</a>
-          </li>
-          {% else %}
-          <li class="page-item"><a class="page-link"  href="?page={{i}}{% if ordering %}&ordering={{ ordering }}{% endif %}">{{i}}</a></li>
-          {% endif %}
-          {% endfor %}
-          {% if page_obj.has_next %}
-          <li class="page-item">
-            <a class="page-link" tabindex= "-1" href ="?page={{ page_obj.next_page_number }}{% if ordering %}&ordering={{ ordering }}{% endif %}">Next</a>
-          </li>
-          {% endif %}
-        </ul>
-      </nav>
+            {% endfor %}
+            {% if page_obj.has_next %}
+            <li class="page-item">
+              <a class="page-link" tabindex= "-1" href ="?page={{ page_obj.next_page_number }}{% if ordering %}&ordering={{ ordering }}{% endif %}">Next</a>
+            </li>
+            {% endif %}
+          </ul>
+        </nav>
+</div>
 
     {% endif %}
  
