--- a/Feedbacksystem/templates/pages/faculty.html
+++ b/Feedbacksystem/templates/pages/faculty.html
@@ -4,40 +4,66 @@
 {% block title %}Faculty{% endblock %}
 
 {% block header %}
-
-    <h2> Manage Faculty</h2>
-    <hr>
-   
-{% endblock header %}
-<hr>
-{% block feature %}
-<a class="btn btn-warning" style = "color: black; text-decoration: none;" href="{% url 'addteacher' %}"><i class="bi bi-person-plus-fill"></i> <b>Add Faculty</b></a>
-<br>
-<br>
-<table class="table table-striped table-bordered table-responsive  ">
-    <tr>
-        <th scope="col" style="color:#fafafa;  background: #2a9134">FIRST NAME </th>
-        <th  scope="col" style="color:#fafafa;  background: #2a9134">LAST NAME </th>
-        <th  scope="col" style="color:#fafafa;  background: #2a9134">GENDER </th>
-        <th  scope="col" style="color:#fafafa;  background: #2a9134">EMAIL </th>
-        <th  scope="col" style="color:#fafafa;  background: #2a9134">CONTACT NUMBER </th>
-        <th  scope="col" style="color:#fafafa;  background: #2a9134">DEPARTMENT </th>
-        <th  scope="col" style="color:#fafafa;  background: #2a9134">OPTIONS </th>
-    </tr>
-    {% for i in faculty %}
-    <tr>
-        <td>{{ i.first_name }}</td>
-        <td>{{ i.last_name }}</td>
-        <td>{{ i.gender }}</td>
-        <td>{{ i.email }}</td>
-        <td>{{ i.contact_number }}</td>
-        <td>{{ i.department }}</td>
-        <td style="display: flex; flex-direction: row; gap:1em"> <a class="nav-link" href="{% url 'facultyevaluations' i.pk %}"><button class="btn btn-primary" style=" padding:3px 5px 3px 5px"><i class="bi bi-eye-fill" style="font-size:20px"></i> </button></a> <a class="nav-link" href="{% url 'editteacher'  i.pk  %}"><button class="btn btn-warning" style=" padding:3px 5px 3px 5px"><i class="bi bi-pencil-square" style="font-size:20px"></i></button></a>
-          <a class="nav-link" href="{% url 'deleteTeacher'  i.pk  %}"><button class="btn btn-danger" ><i style="font-size:20px" class='bx bxs-trash' ></i></button></a>
-        </td>
-    </tr>
-
-    {% endfor %}
-
-</table>
+  
+      <h2> Manage Faculty</h2>
+      <hr>
+  
+  {% endblock header %}
+  <hr>
+  {% block feature %}
+  <button type="button" class="btn btn-warning custom-btn" style = "color: black; text-decoration: none; " data-bs-toggle="modal" data-bs-target="#exampleModal"></a><i class="bi bi-person-plus-fill"></i> <b>Add Faculty</b></button>
+  
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-scrollable">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="exampleModalLabel">Add Faculty</h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+              <form method="POST" action="">
+                  {% csrf_token %}
+                  {{ form.as_p }}
+  
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <input type = "submit" class="btn custom-btn" value="Add">
+          </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  
+  <br>
+  <br>
+  <div class="table-responsive">
+    <table class="table table-bordered table-responsive  ">
+        <tr>
+            <th scope="col">FIRST NAME </th>
+            <th  scope="col">LAST NAME </th>
+            <th  scope="col">GENDER </th>
+            <th  scope="col">EMAIL </th>
+            <th  scope="col">CONTACT NUMBER </th>
+            <th  scope="col">DEPARTMENT </th>
+            <th  scope="col">OPTIONS </th>
+        </tr>
+        {% for i in faculty %}
+        <tr>
+            <td>{{ i.first_name }}</td>
+            <td>{{ i.last_name }}</td>
+            <td>{{ i.gender }}</td>
+            <td>{{ i.email }}</td>
+            <td>{{ i.contact_number }}</td>
+            <td>{{ i.department }}</td>
+            <td style="display: flex; flex-direction: row; gap:1em"> <a href="{% url 'facultyevaluations' i.pk %}"><button class="btn btn-primary" style=" padding:3px 5px 3px 5px"><i class="bi bi-eye-fill" style="font-size:20px"></i> </button></a> <a href="{% url 'editteacher'  i.pk  %}"><button class="btn btn-warning" style=" padding:3px 5px 3px 5px"><i class="bi bi-pencil-square" style="font-size:20px"></i></button></a>
+              <a href="{% url 'deleteTeacher'  i.pk  %}"><button class="btn btn-danger" ><i style="font-size:20px" class='bx bxs-trash' ></i></button></a>
+            </td>
+        </tr>
+    
+        {% endfor %}
+    
+    </table>
+  </div>
 {% endblock feature %}
