--- a/Feedbacksystem/templates/pages/facultyevaluations.html
+++ b/Feedbacksystem/templates/pages/facultyevaluations.html
@@ -13,16 +13,16 @@
 {% if avg_rating %}
   <p><strong>Total Average Rating: {{ avg_rating|floatformat:1 }} </strong></p>
 {% endif %}
-<table class="table table-striped table-bordered table-responsive  ">
+<table class="table table-bordered table-responsive  ">
     <tr>
-        <th  scope="col" class="bg-success">SUBJECT</th>
-        <th  scope="col" class="bg-success">FACULTY</th>
-        <th  scope="col" class="bg-success">AVERAGE RATING </th>
-        <th  scope="col" class="bg-success">OVERALL IMPRESSION </th>
-        <th  scope="col" class="bg-success">POLARITY </th>
-        <th  scope="col" class="bg-success">ACADEMIC YEAR </th>
-        <th  scope="col" class="bg-success">SEMESTER </th>
-        <th  scope="col" class="bg-success">OPTIONS </th>
+        <th  scope="col">SUBJECT</th>
+        <th  scope="col">FACULTY</th>
+        <th  scope="col">AVERAGE RATING </th>
+        <th  scope="col">OVERALL IMPRESSION </th>
+        <th  scope="col">POLARITY </th>
+        <th  scope="col">ACADEMIC YEAR </th>
+        <th  scope="col">SEMESTER </th>
+        <th  scope="col">OPTIONS </th>
     </tr>
     {% for i in teacher_evaluations %}
     <tr>
@@ -33,7 +33,15 @@
         <td>{{ i.predicted_sentiment }}</td>
         <td>{{ i.academic_year }}</td>
         <td>{{ i.semester }}</td>
-        <td><a class="nav-link" href="{% url 'view_evaluation_form' i.pk %}"><b>VIEW</b><a class="nav-link" href="{% url 'deleteEvaluation'  i.pk  %}"><b>DELETE</b></a></td>
+        <td>
+            <div class="row" style="align-items: center; justify-content: center;">
+            <div class="col-5"><a href="{% url 'admin_view_evaluation_form' i.pk %}">
+            <button class="btn btn-primary" style=" padding:3px 5px 3px 5px">
+                <i class="bi bi-eye-fill" style="font-size:20px"></i></button></a></div>
+            <div class="col-7">
+            <a href="{% url 'deleteEvaluation'  i.pk  %}"><button class="btn btn-danger" style=" padding:3px 5px 3px 5px; ;" ><i style="font-size:24px" class='bx bxs-trash' ></i></button></a></td>
+                        </div>
+            </div>
     </tr>
 
     {% endfor %}
