--- a/Feedbacksystem/templates/pages/sections.html
+++ b/Feedbacksystem/templates/pages/sections.html
@@ -3,31 +3,66 @@
 {% block title %}Sections{% endblock %}
 
 {% block header %}
-
     <h2> Manage Sections</h2>
     <hr>
    
 {% endblock header %}
 <hr>
 {% block feature %}
-<a class="btn btn-warning" style = "color: black; text-decoration: none;" href="{% url 'addsection' %}"><i class="bi bi-plus-square-fill"></i> <b>Add Section</b></a>
+<a class="btn btn-warning custom-btn" data-bs-toggle="modal" data-bs-target="#exampleModal" style = "color: black; text-decoration: none;"><i class="bi bi-plus-square-fill"></i> <b>Add Section</b></a>
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Add Section</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+            <form method="POST" action="">
+                {% csrf_token %}
+                <div class="form-group">
+                    {{ form.name.label_tag }}
+                    {{ form.name }}
+                    </div>
+            
+                <div class="form-group">
+                    {{ form.subjects.label_tag }}
+                    <div class="checkbox-list">
+                        {% for subject in form.subjects %}
+                            <div class="form-check">
+                            {{ subject }}
+                            </div>
+                        {% endfor %}
+                    </div>
+                </div>
+            
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <input type = "submit" value="Add" class="btn btn-warning custom-btn">
+            </form>
+        </div>
+      </div>
+    </div>
+  </div>
 <br>
 <br>
-<table class="table table-hover table-striped table-bordered table-responsive  ">
+<table class="table table-bordered table-responsive  ">
     <tr>
-        <th  scope="col" style="color:#fafafa; background: #2a9134">SECTION </th>
-        <th  scope="col" style="color:#fafafa; background: #2a9134">OPTIONS </th>
-       
-       
+        <th  scope="col">SECTION </th>
+        <th  scope="col">OPTIONS </th>    
     </tr>
     {% for i in section %}
     <tr>
         <td>{{ i.name }}</td>   
-        <td style="display: flex; flex-direction: row;"> 
-        <a style="margin-right: 10px;"class="nav-link" href="{% url 'section_details' i.pk %}"><b>VIEW</b></a>
-        <a style="margin-right: 10px;" class="nav-link" href="{% url 'editsection' i.pk %}"><b>EDIT</b></a>
-        <a style="margin-right: 10px;" class="nav-link" href="{% url 'deleteSection' i.pk %}"><b>DELETE</b></a>
-          </td>
+
+        <td style="display: flex; flex-direction: row;">
+          <a href="{% url 'section_details' i.pk %}">
+          <button class="btn btn-primary" style=" padding:3px 5px 3px 5px; margin-right: 10px;">
+            <i class="bi bi-eye-fill" style="font-size:20px"></i></button></a> <a style="margin-right: 10px;" href="{% url 'editsection'  i.pk  %}"><button class="btn btn-warning" style=" padding:3px 5px 3px 5px"><i class="bi bi-pencil-square" style="font-size:20px"></i></button></a>
+          <a style="margin-right: 10px;" href="{% url 'deleteSection'  i.pk  %}"><button class="btn btn-danger" ><i style="font-size:20px" class='bx bxs-trash' ></i></button></a>
+        </td>
     </tr>
 
     {% endfor %}
