--- a/Feedbacksystem/templates/pages/view_department.html
+++ b/Feedbacksystem/templates/pages/view_department.html
@@ -10,17 +10,17 @@
 {% endblock header %}
 <hr>
 {% block feature %}
-<a class="btn btn-warning" style = "color: black;" href="{}"> <i class="bi bi-person-plus-fill"></i> <b>Add Faculty</b></a>
+<a class="btn btn-warning custom-btn" style = "color: black;" href="{}"> <i class="bi bi-person-plus-fill"></i> <b>Add Faculty</b></a>
 <br>
 <br>
-    <table class="table table-striped table-responsive table-bordered">
+    <table class="table table-responsive table-bordered">
 
             <tr>
-                <th scope="col" style="color:#fafafa; background: #2a9134">FACULTY</th>
-                <th  scope="col" style="color:#fafafa; background: #2a9134">GENDER </th>
-                <th  scope="col" style="color:#fafafa; background: #2a9134">EMAIL </th>
-                <th  scope="col" style="color:#fafafa; background: #2a9134">CONTACT NUMBER </th>
-                <th  scope="col" style="color:#fafafa; background: #2a9134">OPTIONS </th>
+                <th scope="col">FACULTY</th>
+                <th  scope="col">GENDER </th>
+                <th  scope="col">EMAIL </th>
+                <th  scope="col">CONTACT NUMBER </th>
+                <th  scope="col">OPTIONS </th>
             </tr>
 
     </thead>
@@ -30,11 +30,9 @@
             <td>{{ i.gender }}</td>
             <td>{{ i.email }}</td>
             <td>{{ i.contact_number }}</td> 
-            <td style="display: flex; flex-direction: row; justify-content: space-around;">
-                <a class="nav-link" href="{% url 'facultyevaluations' i.pk %} " ><b>VIEW</b></a>
-                <a class="nav-link" href="{% url 'editteacher'  i.pk  %}"><b>EDIT</b></a>
-                <a class="nav-link" href="{% url 'deleteTeacher'  i.pk  %}" style="margin-right: 1em;"><b>DELETE</b></a>
-            </td>
+            <td style="display: flex; flex-direction: row; gap:1em"> <a href="{% url 'facultyevaluations' i.pk %}"><button class="btn btn-primary" style=" padding:3px 5px 3px 5px"><i class="bi bi-eye-fill" style="font-size:20px"></i> </button></a> <a href="{% url 'editteacher'  i.pk  %}"><button class="btn btn-warning" style=" padding:3px 5px 3px 5px"><i class="bi bi-pencil-square" style="font-size:20px"></i></button></a>
+                <a href="{% url 'deleteTeacher'  i.pk  %}"><button class="btn btn-danger" ><i style="font-size:20px" class='bx bxs-trash' ></i></button></a>
+              </td>
     </tr>
 
     {% endfor %}
